Remove height style from MainContainer children Reason: Caused issues with smaller width devices.
Side Effects:
At some resolutions, a scrollbar will be displayed unnecessarily.

--- a/src/Components/MainContainer.css
+++ b/src/Components/MainContainer.css
@@ -16,7 +16,6 @@
 .children-container {
   margin: 0 auto;
   width: 95vw;
-  height: calc(100vh - 130px);
 }
 
 @media only screen and (min-width: 768px) {
